test/functional/run/missing_argument_c_variadic.glu
//
// RUN: not gluc -c %s -o %t.o 2>&1 | FileCheck -v %s
//

@no_mangling @c_variadic func printf(s: *Char, p: Int) -> Int;


// CHECK: note: Available overload: printf : @c_variadic (*Char, i32) -> i32
// CHECK: error: Cannot convert (?) -> ? to ?
func main() -> Int {
    printf("We can now print an Int, check this out -> %d\n");
    return 0;
}
